--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,7 @@ main.class=CTEApplication
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
